# image-classifier

./: Makefile  README.md  pyproject.toml
project/notebooks/: 0-basic-classifier.ipynb  1-data-augmentation-and-dropout.ipynb  2-add-layers.ipynb  3-use-pretrain-model.ipynb  4-predict.ipynb
