[tool.poetry]
name = "image-classifier"
version = "0.1.0"
description = ""
authors = ["Fernanda Secinaro <fernanda.secinaro@qubika.com>"]
readme = "README.md"

[tool.poetry.dependencies]
python = "3.12.5"
tensorflow = "^2.17.0"
pillow = "^10.4.0"
matplotlib = "^3.9.2"
scipy = "^1.14.1"
opencv-python = "^4.10.0.84"
np = "^1.0.2"


[tool.poetry.group.dev.dependencies]
ipykernel = "^6.29.5"
python-dotenv = "^1.0.1"

[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
